--- a/.github/workflows/memoir.yml
+++ b/.github/workflows/memoir.yml
@@ -24,6 +24,13 @@ jobs:
           install.packages(c("distill", "downlit", "memoiR", "rmdformats", "tinytex"))
           tinytex::install_tinytex()
         shell: Rscript {0}
+     - name: Install dbmss dev
+        env:
+          GITHUB_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          install.packages("remotes")
+          remotes::install_github("EricMarcon/dbmss")
+        shell: Rscript {0}
       - name: Render Rmarkdown files
         run: |
           Sys.setlocale("LC_TIME", "en_US")
