--- a/.github/workflows/memoir.yml
+++ b/.github/workflows/memoir.yml
@@ -23,6 +23,8 @@ jobs:
           options(install.packages.check.source = "no")
           install.packages(c("distill", "downlit", "memoiR", "rmdformats", "tinytex"))
           tinytex::install_tinytex()
+          tinytex::tlmgr_install("pdfcrop")
+          install.packages("magick")
         shell: Rscript {0}
       - name: Install dbmss dev
         env:
