--- a/.github/workflows/memoir.yml
+++ b/.github/workflows/memoir.yml
@@ -30,7 +30,7 @@ jobs:
           GITHUB_PAT: ${{ secrets.GH_PAT }}
         run: |
           install.packages("remotes")
-          remotes::install_github("EricMarcon/dbmss")
+          remotes::install_github("EricMarcon/dbmss", ref = "JSPE")
         shell: Rscript {0}
       - name: Render Rmarkdown files
         run: |
