added Jekyll theme

--- a/.github/workflows/memoir.yml
+++ b/.github/workflows/memoir.yml
@@ -38,6 +38,9 @@ jobs:
           lapply(list.files(pattern="*.Rmd"), function(file) rmarkdown::render(file, "all"))
           memoiR::build_githubpages()
         shell: Rscript {0}
+      - name: GH Pages Theme
+        run: |
+          echo 'theme: jekyll-theme-slate' > docs/_config.yml
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
